tests/snapshots/cli_snapshots__list_snapshots__list_amendment_include_archived.snap
---
source: tests/cli_snapshots.rs
expression: out
---
- type: amendment
  id: 1
  name: fixture-edit
  status: proposed
  kind: amendment
- type: amendment
  id: 2
  name: fixture-edit-archived
  status: proposed
  kind: amendment
