tests/snapshots/cli_snapshots__list_snapshots__list_by_kind.snap
---
source: tests/cli_snapshots.rs
expression: out
---
- type: shape
  id: 2
  name: Child
  status: proposed
  kind: feature
