tests/snapshots/cli_snapshots__list_snapshots__list_shapes_only.snap
---
source: tests/cli_snapshots.rs
expression: out
---
- type: shape
  id: 1
  name: Parent
  status: proposed
  kind: module
- type: shape
  id: 2
  name: Child
  status: proposed
  kind: feature
